--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body">
-
+  <div class="container">
+    <div class="banner">
+      <div class="header">
+          <p id="box">X</p>
+      </div>
+      <div class="user-info">
+        <img src="images/shiro_pfp.png" alt="shiro pfp">
+        <h3>Please be patient. This User is slow with frontend...</h3>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
