--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="user-info">
         <img src="images/shiro_pfp.png" alt="shiro pfp">
-        <h3>Please be patient. This User is slow with frontend...</h3>
+        <h3>Please be patient. This User is learning frontend...</h3>
       </div>
     </div>
   </div>
