--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>My landing page</title>
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
@@ -12,11 +14,11 @@
   <div class="container">
     <div class="banner">
       <div class="header">
-          <p id="box">X</p>
+        <button id="closeBtn" class="btn-close"></button>
       </div>
       <div class="user-info">
         <img src="images/shiro_pfp.png" alt="shiro pfp">
-        <h3>Please be patient. This User is learning frontend...</h3>
+        <h4>Please be patient. This User is learning frontend...</h4>
       </div>
     </div>
   </div>
