--- a/index.html
+++ b/index.html
@@ -2,25 +2,113 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My landing page</title>
+  <title>ʕ•ᴥ•ʔ</title>
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body">
+<body>
+  <iframe id="backgroundFrame" src="https://remilia.market/gods_remix/gen.html#539f62686c66e091a003a5f3a84390371ac3ba23b72f152170fcda46c83a2c09" frameborder="0"></iframe>
+
+<!-- main banner -->
   <div class="container">
     <div class="banner">
       <div class="header">
-        <button id="closeBtn" class="btn-close"></button>
+        <button id="closeBannerBtn" class="btn-close"></button>
       </div>
       <div class="user-info">
         <img src="images/shiro_pfp.png" alt="shiro pfp">
         <h4>Please be patient. This User is learning frontend...</h4>
       </div>
     </div>
+  </div>
+  <!-- popups -->
+  <div class="container" id="popupContainer"  style="display:none">
+    <div class="banner-pop">
+      <div class="header-pop">
+        <button id="closePopupBtn" class="btn-close"></button>
+      </div>
+      <div class="projects">
+        <div class="project" id="project-kali">
+          <a href="https://keep.kali.gg/" target="_blank" rel="noopener noreferrer">
+            <img id="kali" src="images/kali_logo.jpg" alt="kali">
+          </a>
+          <p>kali</p>
+        </div>
+        <div class="project" id="project-wrappr">
+          <a href="https://www.wrappr.wtf/"" target="_blank" rel="noopener noreferrer">
+            <img id="wrappr" src="images/wrappr.png" alt="wrappr">
+          </a>
+          <p>wrappr</p>
+        </div>
+        <div class="project" id="project-nani">
+          <a href="https://nani.ooo/" target="_blank" rel="noopener noreferrer">
+            <img id="nani" src="images/nani.jpeg" alt="nani">
+          </a>
+          <p>nani</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- jpegs -->
+  <div class="container" id="jpegContainer">
+    <div class="banner-jpegs">
+      <div class="header-jpegs">
+        <button id="closePopupBtn" class="btn-close"></button>
+      </div>
+      <div class="jpegs">
+        <div class="jpeg" id="remilia-folder">
+            <img id="remilia-image" src="images/folder.png" alt="remilia">
+          <p>remilia</p>
+        </div>
+      <div class="jpeg" id="bera-folder">
+          <img id="bera-image" src="images/folder.png" alt="bera">
+        <p>beras</p>
+      </div>
+      <div class="jpeg" id="shiro">
+        <a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/111742181400930061902510359858657921591493830882442799692376905874048592904193" target="_blank" rel="noopener noreferrer">
+          <img id="nani" src="images/shiro_pfp.png" alt="shiro">
+        </a>
+        <p>shiro.png</p>
+      </div>
+      <div class="jpeg" id="radcattin">
+        <a href="https://opensea.io/assets/ethereum/0xce2b3433356a30e6b83661b97ac97d6adf043db5/2" target="_blank" rel="noopener noreferrer">
+          <img id="nani" src="images/radcattin.png" alt="radcattin">
+        </a>
+        <p>radcat.png</p>
+      </div>
+      <div class="jpeg" id="anata">
+        <a href="https://opensea.io/assets/ethereum/0xf729f878f95548bc7f14b127c96089cf121505f8/122" target="_blank" rel="noopener noreferrer">
+          <img id="nani" src="images/anata.png" alt="anata">
+        </a>
+        <p>anata.png</p>
+      </div>
+      </div>
+    </div>
+  </div>
+<!-- folders -->
+  <div class="folder" id="projects-folder">
+    <img src="images/folder.png" alt="folder">
+    <p>projects</p>
+  </div>
+  <div class="folder" id="jpegs-folder">
+    <img src="images/folder.png" alt="folder">
+    <p>jpegs</p>
+  </div>
+  <div class="folder" id="twitter">
+    <a href="https://www.twitter.com/Cattin0x/" target="_blank" rel="noopener noreferrer">
+      <img src="images/twitter_pixel_logo_icon_181924.png" alt="twitter">
+    </a>
+    <p>twitter</p>
+  </div>
+  <div class="folder" id="telegram">
+    <a href="https://t.me/cattin0x" target="_blank" rel="noopener noreferrer">
+      <img src="images/telegram.png" alt="telegram">
+    </a>
+    <p>telegram</p>
   </div>
   <script src="js/script.js"></script>
 </body>
