a lot of new tings

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </div>
   </div>
   <!-- jpegs -->
-  <div class="container" id="jpegContainer">
+  <div class="container" id="jpegContainer" style="display:none">
     <div class="banner-jpegs">
       <div class="header-jpegs">
-        <button id="closePopupBtn" class="btn-close"></button>
+        <button id="closeJpegBtn" class="btn-close"></button>
       </div>
       <div class="jpegs">
         <div class="jpeg" id="remilia-folder">
@@ -89,6 +89,108 @@
       </div>
     </div>
   </div>
+  <!-- remilia nfts popup -->
+  <div class="container" id="remiliaNftsContainer" style="display:none">
+    <div class="banner-nfts">
+      <div class="header-nfts">
+        <button id="closeRemiliaNftsBtn" class="btn-close"></button>
+      </div>
+      <div class="nfts">
+
+        <div class="nft" id="milady">
+          <a href="https://opensea.io/assets/ethereum/0x5af0d9827e0c53e4799bb226655a1de152a425a5/5558" target="_blank" rel="noopener noreferrer">
+            <img src="images/spoobs.png" alt="milady" title="Click to view on OpenSea">
+          </a>
+          <p>milady.png</p>
+        </div>
+
+        <div class="nft" id="B_I_T_C_H">
+          <a href="https://opensea.io/assets/ethereum/0x8a45fb65311ac8434aad5b8a93d1eba6ac4e813b/264" target="_blank" rel="noopener noreferrer">
+            <img src="images/that_b.png" alt="B_I_T_C_H" title="Click to view on OpenSea">
+          </a>
+          <p>that_b.png</p>
+        </div>
+
+        <div class="nft" id="remilio">
+          <a href="https://opensea.io/assets/ethereum/0xd3d9ddd0cf0a5f0bfb8f7fceae075df687eaebab/8960" target="_blank" rel="noopener noreferrer">
+            <img src="images/remilio.png" alt="remilio" title="Click to view on OpenSea">
+          </a>
+          <p>remilio.png</p>
+        </div>
+
+        <div class="nft" id="pixelady_1">
+          <a href="https://opensea.io/assets/ethereum/0x8fc0d90f2c45a5e7f94904075c952e0943cfccfd/2143" target="_blank" rel="noopener noreferrer">
+            <img src="images/pixelady_ak.png" alt="pixelady_1" title="Click to view on OpenSea">
+          </a>
+          <p>pixelady_1.png</p>
+        </div>
+
+        <div class="nft" id="pixelady_2">
+          <a href="https://opensea.io/assets/ethereum/0x8fc0d90f2c45a5e7f94904075c952e0943cfccfd/801" target="_blank" rel="noopener noreferrer">
+            <img src="images/pixelady_2.png" alt="pixelady_2" title="Click to view on OpenSea">
+          </a>
+          <p>pixelady_2.png</p>
+        </div>
+
+        <div class="nft" id="gods_remix">
+          <a href="https://opensea.io/assets/ethereum/0x285ea754d9418073cc87994f1de143f918551390/50319475212523392536078947525693334887144565359197920061410710727667964717260" target="_blank" rel="noopener noreferrer">
+            <img src="/images/gods_image.png" alt="gods_remix" title="Click to view on OpenSea">
+          </a>
+          <p>gods_remix.svg</p>
+        </div>
+
+        <div class="nft" id="yayo_1">
+          <a href="https://opensea.io/assets/ethereum/0x09f66a094a0070ebddefa192a33fa5d75b59d46b/1941" target="_blank" rel="noopener noreferrer">
+              <img src="images/yayo_1.png" alt="yayo_1" title="Click to view on OpenSea">
+          </a>
+          <p>yayo_1.png</p>
+        </div>
+
+        <div class="nft" id="yayo_2">
+          <a href="https://opensea.io/assets/ethereum/0x09f66a094a0070ebddefa192a33fa5d75b59d46b/3564" target="_blank" rel="noopener noreferrer">
+              <img src="images/yayo_2.png" alt="yayo_2" title="Click to view on OpenSea">
+          </a>
+          <p>yayo_2</p>
+        </div>
+
+        <div class="nft" id="brg">
+          <a href="https://opensea.io/assets/ethereum/0xd0cd0cd8f2d13fa44c19019ec5ec89d4cf0f54eb/1" target="_blank" rel="noopener noreferrer">
+              <img src="images/brg.jpeg" alt="brg" title="Click to view on OpenSea">
+          </a>
+          <p>brg.mp4</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Bera NFTs -->
+  <div class="container" id="beraNftsContainer" style="display:none">
+    <div class="banner-nfts">
+        <div class="header-nfts">
+            <button id="closeBeraNftsBtn" class="btn-close"></button>
+        </div>
+        <div class="nfts">
+            <!-- band_bear NFT -->
+            <div class="nft" id="band_bear">
+                <a href="https://opensea.io/assets/ethereum/0xb4e570232d3e55d2ee850047639dc74da83c7067/473" target="_blank" rel="noopener noreferrer">
+                    <img src="images/band.jpeg" alt="band_bear" title="Click to view on OpenSea">
+                </a>
+                <p>band_bear.png</p>
+              </div>
+
+            <!-- bit_bear NFT -->
+            <div class="nft" id="bit_bear">
+                <a href="https://opensea.io/assets/ethereum/0x32bb5a147b5371fd901aa4a72b7f82c58a87e36d/765" target="_blank" rel="noopener noreferrer">
+                    <img src="images/bit.gif" alt="bit_bear" title="Click to view on OpenSea">
+                </a>
+                <p>bit_bear.gif</p>
+            </div>
+
+        </div>
+    </div>
+  </div>
+
 <!-- folders -->
   <div class="folder" id="projects-folder">
     <img src="images/folder.png" alt="folder">
